# ionex_reader

./: LICENSE  README.md  ionex_data.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
ionex_reader/: __init__.py  ionex.py  ionex_metadata.py
ionex_reader_old/: ionex_v2.py  ionex_v3.py
tests/: test_ionex.py
